# stork-external

./: .dockerignore  .gitignore  .golangci.yml  .linkspector.yml  .mockery.yaml  Cargo.toml  Dockerfile  HybridStorkPriceOracle.sol  LICENSE  Makefile  README.md  chain-pusher.Dockerfile  cspell.json  data-provider.config.json  docker-compose.yml  go.mod  go.sum  publisher-agent.Dockerfile  requirements.txt  sample.data-provider.config.json  signer.Dockerfile  stork-cli.Dockerfile  stork-publisher-agent.Dockerfile
.github/workflows/: ci.yml  clear-go-cache.yml  lint.yml  test-contracts.yml  test-sdks.yml  test.yml
apps/: .gitignore  README.md  chain-pusher.Dockerfile  go.mod  go.sum  main.go  publisher-agent.Dockerfile  pusher.Dockerfile  sample.asset-config.yaml
apps/chain_pusher/: README.md  main.go  main_cosmwasm.go  main_default.go  main_initia.go
apps/chain_pusher/cmd/: main.go
apps/chain_pusher/lib/: aptos.go  chain-interactor.go  cosmwasm.go  evm.go  fuel-push.go  fuel.go  model.go  solana.go  solana_test.go  stork_websocket_client.go  sui.go
apps/chain_pusher/lib/contract_bindings/fuel/fuel_ffi/: Cargo.toml
apps/chain_pusher/lib/contract_bindings/fuel/fuel_ffi/src/: error.rs  fuel_client.rs  lib.rs
apps/cmd/animate/: main.go
apps/cmd/chain_pusher/: main.go
apps/cmd/data_provider/: main.go
apps/data_provider/: README.md
apps/docs/: README.md  chain_pusher.md  data_provider.md  publisher_agent.md  pusher.md
apps/first_party_pusher/: .env.example  README.md  docker-compose.yml  main.go  sample.asset-config.yaml  test_client.js
apps/hip3_pusher/: .gitignore  README.md  pyproject.toml
apps/hip3_pusher/examples/: test_config.yaml
apps/hip3_pusher/src/hip3_pusher/: __init__.py  __main__.py  cli.py  config.py  logging.py  main.py  runner.py
apps/hip3_pusher/tests/: test_config.py  test_logging.py  test_sanity.py
apps/publisher_agent/: README.md
apps/scripts/: animate.sh  generate_data_provider_import_file.py  push_to_docker.sh  update_shared_data_provider_code.py
apps/self_serve_chain_pusher/: README.md  go.mod  go.sum  main.go  sample.asset-config.yaml  test_client.js
chains/cosmwasm/: README.md
chains/cosmwasm/examples/cosmwasm_core_no_dep/: Cargo.toml
chains/cosmwasm/examples/cosmwasm_core_no_dep/src/: contract.rs  msg.rs  stork.rs
chains/evm/: README.md
chains/fuel/: Forc.toml  README.md
chains/fuel/contracts/stork/: Cargo.toml  Forc.toml
chains/fuel/contracts/stork/artifacts/: stork-abi.json
chains/fuel/contracts/stork/src/: main.sw  verify.sw
chains/fuel/contracts/stork/tests/: harness.rs
chains/initia_minimove/: README.md
chains/solana/: Cargo.toml  README.md
chains/solana/contracts/programs/stork/: Cargo.toml
chains/solana/contracts/programs/stork/src/: lib.rs
chains/sui/: README.md
cli/: Makefile  README.md  asset-config.yaml  evm-push.go  evm.go  go.mod  go.sum  log.go  main.go  model.go  sample.asset-config.yaml  stork-publisher-agent.go  stork_contract.go  stork_websocket_client.go  utilities.go
cli/docs/: README.md
cli/stork-publisher-agent/: README.md  config.go  config_test.go  incoming_puller.go  log.go  main.go  model.go  processor.go  processor_test.go  registry.go  rest.go  runner.go  signer.go  signer_test.go  util.go  util_test.go  websocket.go
cli/stork-specific/: README.md
contracts/aptos/: README.md
contracts/cosmwasm/: README.md
contracts/cosmwasm/contracts/: Cargo.toml  README.md
contracts/cosmwasm/contracts/.github/workflows/: generate.yml
contracts/cosmwasm/contracts/src/: contract.rs  error.rs  events.rs  lib.rs  responses.rs  temporal_numeric_value.rs  verify.rs
contracts/cosmwasm/contracts/src/multitest/: mod.rs
contracts/evm/: .gitignore  .prettierrc  README.md  docker-entrypoint.sh  hardhat.config.ts  package-lock.json  package.json  stork.abi
contracts/fuel/: README.md
contracts/fuel/contracts/stork/: Cargo.toml  Forc.toml  invariatians.md
contracts/fuel/contracts/stork/src/: main.sw  verify.sw
contracts/fuel/contracts/stork/tests/: harness.rs
contracts/fuel/contracts/stork_proxy/: Cargo.toml  Forc.toml  invariants.md
contracts/fuel/contracts/stork_proxy/src/: main.sw
contracts/fuel/contracts/stork_proxy/tests/: harness.rs
contracts/solana/: Anchor.toml  README.md  package-lock.json  package.json
contracts/solana/programs/stork/: .gitignore  Anchor.toml  Cargo.toml
contracts/solana/programs/stork/programs/stork/src/: lib.rs
contracts/solana/programs/stork/src/: lib.rs  verify.rs
contracts/solana/stork/programs/stork/: Cargo.toml
contracts/solana/stork/programs/stork/src/: lib.rs
contracts/stork_chainlink_adapter/: README.md  hardhat.config.ts  package-lock.json  package.json
contracts/stork_pyth_adapter/: README.md  package.json
contracts/sui/: README.md
docker/images/: Dockerfile  evm.Dockerfile  first_party_evm.Dockerfile
docker/scripts/: docker-entrypoint.sh  evm-docker-entrypoint.sh  first-party-evm-docker-entrypoint.sh
docs/: chain_pusher.md  data_provider.md
examples/aptos/: Move.toml  README.md
examples/cosmwasm/: README.md
examples/cosmwasm/sylvia/: .gitignore  Cargo.toml  README.md  Readme.md
examples/cosmwasm/sylvia/schema/: example.json
examples/cosmwasm/sylvia/schema/raw/: execute.json  instantiate.json
examples/cosmwasm/sylvia/src/: contract.rs
examples/fuel/: Forc.toml  README.md  fuel-toolchain.toml
examples/solana/: Anchor.toml  README.md  package-lock.json  package.json
examples/solana/programs/example/: Cargo.toml
examples/solana/programs/example/src/: lib.rs
examples/stork_chainlink_adapter/: README.md  hardhat.config.ts  package-lock.json  package.json  remappings.txt
examples/stork_pyth_adapter/: README.md  package-lock.json  package.json
examples/sui/: Move.toml  README.md
mk/: go.mk  lint.mk  misc.mk  rust.mk
scripts/: animate.sh  initialize_docker.sh  push_to_docker.sh
shared/: errors.go  types.go
shared/signer/: cgo_flags.go  evm_utils.go  model.go  signer.go  signer_test.go  stark_utils.go  verifier.go  verifier_test.go
utils/generate/: main.go
(+1185 files in other folders)
