[package]
name = "example"
authors = ["Henry Baldwin <henry@stork.network>"]
version = "0.1.0"
edition = "2021"

[features]
library = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sylvia = "1.3.0"
cw-storage-plus = "2.0.0"
stork-cw = { path = "../../../contracts/cosmwasm/contracts", features = ["library"] }
[dev-dependencies]
sylvia = { version = "1.3.0", features = ["mt"] }
