[package]
name = "example"
version = "0.1.0"
edition = "2021"

[features]
library = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sylvia = "1.3.0"
cw-storage-plus = "2.0.0"
stork-cw = { version = "0.1.1", features = ["library"] }
[dev-dependencies]
sylvia = { version = "1.3.0", features = ["mt"] }
