[package]
name = "stork-fuel-contract-tests"
description = "A package containing rust integration tests for the Stork fuel contract."
version = "0.1.0"
edition = "2021"
authors = ["Georgios Delkos <georgios.delkos@ourovoros.io>", "Henry Baldwin <henry@stork.network>"]
license = "Apache-2.0"

[dev-dependencies]
fuels = "0.70.0"
tokio = { version = "1.12", features = ["rt", "macros"] }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
