[package]
name = "stork_proxy_tests"
description = "A cargo-generate template for Rust + Sway integration testing."
version = "0.1.0"
edition = "2021"
authors = ["Georgios Delkos <georgios.delkos@ourovoros.io>"]
license = "Apache-2.0"

[dev-dependencies]
fuels = "0.73.0"
tokio = { version = "1.12", features = ["rt", "macros"] }
fuel-abi-types = "0.12.0"

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
