[package]
name = "example"
version = "0.1.0"
description = "Example program using Stork SDK"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "example"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
stork-sdk = "0.0.4"
hex = "0.4.3"
